# katala-web-research

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: cloned-repo-applicability-2026-05-28.md  completion-audit.md  design.md  domain-validation-benchmark-plan-2026-05-28.md  feed-provider-implementation-plan-2026-05-28.md  github-flow.md  github-management.md  mcp-config-examples.md  metasearch-engine-design.md  metasearch-enhancement-research-2026-05-27.md  metasearch-implementation-plan-2026-05-27.md  operations.md  research-flow.md  research-quality-benchmark.md  rl-and-evaluation.md  search-capability.md  source-evidence.md  trusted-source-registry-2026-05-29.md
scripts/: benchmark-research-quality.py  benchmark-token-budget.py  kwr-research-cycle.sh  verify.sh
src/katala_web_research/: __init__.py  archive.py  brief.py  cli.py  corpus.py  evaluation.py  feeds.py  fusion.py  http.py  investigation.py  issues.py  mcp_server.py  models.py  planner.py  providers.py  rank.py  reader.py  report.py  source_quality.py  source_registry.py  text.py  workflow.py
src/katala_web_research/data/: source_registry.json
tests/: test_archive.py  test_brief.py  test_corpus.py  test_evaluation.py  test_feeds.py  test_fusion.py  test_http.py  test_investigation.py  test_mcp_server.py  test_planner.py  test_project_issues.py  test_providers.py  test_rank.py  test_reader.py  test_report.py  test_source_quality.py  test_source_registry.py  test_text_and_provider_parse.py  test_workflow.py
tests/fixtures/: sample.atom.xml  sample.duckduckgo.html  sample.feed.json  sample.rss.xml
